--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -643,6 +643,7 @@ BEGIN
 GROUPBOX        "N64 Debugger Toolkit", IDC_DEBUGGER_GROUPBOX, 7, 7, 296, 149
 PUSHBUTTON      "Pause", IDC_DEBUGGER_PAUSE, 14, 23, 55, 14
 PUSHBUTTON      "Resume", IDC_DEBUGGER_RESUME, 14, 37, 55, 14
+CONTROL         "Mode", IDC_DEBUGGER_INSTDECODEMODE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 51, 55, 14
 DEFPUSHBUTTON   "Quit Debugger", IDOK, 253, 156, 50, 14
 GROUPBOX        "", IDC_STATIC, 158, 15, 145, 141
 LTEXT           "Instruction:", IDC_STATIC, 166, 25, 38, 12
