--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -647,17 +647,11 @@ CONTROL         "Mode", IDC_DEBUGGER_INSTDECODEMODE, "Button", BS_AUTOCHECKBOX |
 DEFPUSHBUTTON   "Quit Debugger", IDOK, 253, 156, 50, 14
 GROUPBOX        "", IDC_STATIC, 158, 15, 145, 141
 LTEXT           "Instruction:", IDC_STATIC, 166, 25, 38, 12
-LTEXT           "VI:", IDC_STATIC, 166, 37, 38, 14
-LTEXT           "the", IDC_STATIC, 166, 51, 38, 14
+LTEXT           "Precomp Addr", IDC_STATIC, 166, 37, 38, 14
+LTEXT           "Precomp Op", IDC_STATIC, 166, 51, 38, 14
 EDITTEXT        IDC_DEBUGGER_INSTRUCTION, 214, 23, 89, 14, ES_AUTOHSCROLL | ES_READONLY
-EDITTEXT        IDC_DEBUGGER_VI, 214, 37, 89, 14, ES_AUTOHSCROLL
-EDITTEXT        IDC_STATIC, 214, 51, 89, 14, ES_AUTOHSCROLL
-LTEXT           "something", IDC_STATIC, 166, 67, 38, 12
-LTEXT           "a", IDC_STATIC, 166, 79, 38, 14
-LTEXT           "placeholder", IDC_STATIC, 166, 93, 38, 14
-EDITTEXT        IDC_STATIC, 214, 65, 89, 14, ES_AUTOHSCROLL
-EDITTEXT        IDC_STATIC, 214, 79, 89, 14, ES_AUTOHSCROLL
-EDITTEXT        IDC_STATIC, 214, 93, 89, 14, ES_AUTOHSCROLL
+EDITTEXT        IDC_DEBUGGER_PRECOMPADDR, 214, 37, 89, 14, ES_AUTOHSCROLL
+EDITTEXT        IDC_DEBUGGER_PRECOMPOP, 214, 51, 89, 14, ES_AUTOHSCROLL
 CONTROL         "RSP", IDC_DEBUGGER_RSP_TOGGLE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 65, 53, 14
 END
 
