Add rdram dump option to debugger

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -643,6 +643,7 @@ BEGIN
 GROUPBOX        "N64 Debugger Toolkit", IDC_DEBUGGER_GROUPBOX, 7, 7, 296, 149
 PUSHBUTTON      "Pause", IDC_DEBUGGER_PAUSE, 14, 23, 55, 14
 PUSHBUTTON      "Resume", IDC_DEBUGGER_RESUME, 14, 37, 55, 14
+PUSHBUTTON      "RDRAM Dump", IDC_DEBUGGER_DUMPRDRAM, 70, 23, 55, 14
 PUSHBUTTON      "Step", IDC_DEBUGGER_STEP, 70, 37, 55, 14
 CONTROL         "Mode", IDC_DEBUGGER_INSTDECODEMODE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 51, 55, 14
 DEFPUSHBUTTON   "Quit Debugger", IDOK, 253, 156, 50, 14
