--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -636,7 +636,7 @@ PUSHBUTTON      "Close", IDC_ERROR_PANIC_CLOSEMUPEN, 154, 70, 50, 14
 END
 
 IDD_GAMEDEBUGGERDIALOG DIALOGEX 0, 0, 310, 177
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU
 CAPTION "N64 Debugger"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -648,8 +648,8 @@ PUSHBUTTON      "Step", IDC_DEBUGGER_STEP, 70, 37, 55, 14
 DEFPUSHBUTTON   "Quit Debugger", IDOK, 253, 156, 50, 14
 GROUPBOX        "", IDC_STATIC, 158, 15, 145, 141
 LTEXT           "Instruction:", IDC_STATIC, 166, 25, 38, 12
-LTEXT           "Precomp Addr", IDC_STATIC, 166, 37, 38, 14
-LTEXT           "Precomp Op", IDC_STATIC, 166, 51, 38, 14
+LTEXT           "Address", IDC_STATIC, 166, 37, 38, 14
+LTEXT           "Op", IDC_STATIC, 166, 51, 38, 14
 EDITTEXT        IDC_DEBUGGER_INSTRUCTION, 214, 23, 89, 14, ES_AUTOHSCROLL | ES_READONLY
 EDITTEXT        IDC_DEBUGGER_PRECOMPADDR, 214, 37, 89, 14, ES_AUTOHSCROLL
 EDITTEXT        IDC_DEBUGGER_PRECOMPOP, 214, 51, 89, 14, ES_AUTOHSCROLL
