--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -645,7 +645,7 @@ PUSHBUTTON      "Pause", IDC_DEBUGGER_PAUSE, 14, 23, 55, 14
 PUSHBUTTON      "Resume", IDC_DEBUGGER_RESUME, 14, 37, 55, 14
 PUSHBUTTON      "RDRAM Dump", IDC_DEBUGGER_DUMPRDRAM, 70, 23, 55, 14
 PUSHBUTTON      "Step", IDC_DEBUGGER_STEP, 70, 37, 55, 14
-DEFPUSHBUTTON   "Quit Debugger", IDOK, 253, 156, 50, 14
+DEFPUSHBUTTON   "Quit Debugger", IDOK, 253, 156, 50, 14,WS_DISABLED
 GROUPBOX        "", IDC_STATIC, 158, 15, 145, 141
 LTEXT           "Instruction:", IDC_STATIC, 166, 25, 38, 12
 LTEXT           "Address", IDC_STATIC, 166, 37, 38, 14
