--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -128,6 +128,7 @@ BEGIN
             MENUITEM SEPARATOR
             MENUITEM "Loop Movie Playback",         ID_LOOP_MOVIE
             MENUITEM "Start From Beginning",        ID_RESTART_MOVIE
+            MENUITEM "Replay Latest",               ID_REPLAY_LATEST
         END
         MENUITEM SEPARATOR
         MENUITEM "Start &Trace Logger...",      ID_TRACELOG
