--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -142,6 +142,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "&About Mupen64...",           ID_HELP_ABOUT
     END
+    #ifdef LUA_MODULEIMPL
     POPUP "Lua Script"
     BEGIN
         MENUITEM "New Instance",                ID_MENU_LUASCRIPT_NEW
@@ -155,6 +156,7 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Close All",                   ID_MENU_LUASCRIPT_CLOSEALL
     END
+  #endif
 END
 
 ROM_POPUP_MENU MENU
@@ -194,7 +196,9 @@ BEGIN
     GROUPBOX        "Common Options",IDC_COMMON,7,7,215,60
     CONTROL         "Start game in full screen",IDC_STARTFULLSCREEN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,20,100,10
     CONTROL         "1f Input Delay",IDC_INPUTDELAY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,83,90,18
+#ifdef LUA_MODULEIMPL
     CONTROL         "LUA Double Buffer",IDC_CLUADOUBLEBUFFER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,120,104,89,18
+#endif
     CONTROL         "Pause emulation when window is not active",IDC_PAUSENOTACTIVE,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,35,100,10
     CONTROL         "Use global plugins settings",IDC_PLUGIN_OVERWRITE,
@@ -229,8 +233,10 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
 GROUPBOX        "Other Options", IDC_OTHEROPTIONS, 7, 7, 215, 60
+#ifdef LUA_MODULEIMPL
 CONTROL         "Ask on lua close", IDC_LUA_WARNONCLOSE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 20, 100, 10
 CONTROL         "Simplified lua dialog", IDC_LUA_SIMPLEDIALOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 30, 100, 10
+#endif
 CONTROL         "Automatic movie backups", IDC_MOVIEBACKUPS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 40, 100, 10
 END
 
@@ -254,7 +260,7 @@ BEGIN
     GROUPBOX        "",IDC_STATIC,5,60,174,46
     CONTROL         "",IDC_TOTAL_ROMS_PROGRESS,"msctls_progress32",PBS_SMOOTH,11,84,160,14,WS_EX_STATICEDGE
 END
-
+#ifdef LUA_MODULEIMPL
 IDD_LUAWINDOW DIALOGEX 0, 0, 240, 166
 STYLE DS_SETFONT | WS_MINIMIZEBOX | WS_MAXIMIZEBOX | WS_VISIBLE | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "LUA Instance"
@@ -280,7 +286,7 @@ PUSHBUTTON      "Stop", IDC_BUTTON_LUASTOP, 90, 10, 40, 18, WS_DISABLED
 EDITTEXT        IDC_TEXTBOX_LUASCRIPTPATH, 10, 28, 119, 14, ES_AUTOHSCROLL
 END
 
-
+#endif
 IDD_DIRECTORIES DIALOGEX 0, 0, 231, 262
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "Tahoma", 0, 0, 0x0
@@ -613,6 +619,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDC_CANCEL,281,282,50,14
 END
 
+#ifdef LUA_MODULEIMPL
 IDD_LUAINPUTPROMPT DIALOG 0, 0, 250, 200
 STYLE DS_SETFONT | DS_MODALFRAME | DS_3DLOOK | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 CAPTION "Dialog"
@@ -622,6 +629,7 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,161,173,40,20
     EDITTEXT        IDC_TEXTBOX_LUAPROMPT,7,7,236,161,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN
 END
+#endif
 
 IDD_MUPENERROR DIALOGEX 0, 0, 341, 90
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU
@@ -740,11 +748,11 @@ BEGIN
     IDD_AUDIT_ROMS_DIALOG, DIALOG
     BEGIN
     END
-
+#ifdef LUA_MODULEIMPL
     IDD_LUAWINDOW, DIALOG
     BEGIN
     END
-
+#endif
     IDD_DIRECTORIES, DIALOG
     BEGIN
     END
@@ -776,10 +784,11 @@ BEGIN
     IDD_ROM_SETTING_DIALOG, DIALOG
     BEGIN
     END
-
+#ifdef LUA_MODULEIMPL
     IDD_LUAINPUTPROMPT, DIALOG
     BEGIN
     END
+#endif
 END
 #endif    // APSTUDIO_INVOKED
 
