--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -82,6 +82,7 @@ BEGIN
             MENUITEM "Slot 7",                      ID_CURRENTSAVE_7
             MENUITEM "Slot 8",                      ID_CURRENTSAVE_8
             MENUITEM "Slot 9",                      ID_CURRENTSAVE_9
+			MENUITEM "Slot 10",						ID_CURRENTSAVE_10
         END
     END
     POPUP "Options"
@@ -308,7 +309,7 @@ BEGIN
     PUSHBUTTON      "Pause / Break",IDC_HOT_PAUSE,78,64,76,11
     PUSHBUTTON      "Shift 8",IDC_HOT_READONLY,78,76,76,11
     LTEXT           "Fast-Forward:",IDC_STATIC,18,16,57,8,0,WS_EX_RIGHT
-    GROUPBOX        "Save",IDC_HOTKEYS_SAVEGROUP2,10,110,212,144
+    GROUPBOX        "Save",IDC_HOTKEYS_SAVEGROUP2,10,110,212,151
     LTEXT           "Select",IDC_STATIC,62,122,33,8
     LTEXT           "Save",IDC_STATIC,123,122,33,8
     LTEXT           "Load",IDC_STATIC,181,122,36,8
@@ -322,6 +323,7 @@ BEGIN
     LTEXT           "7:",IDC_STATIC,35,213,11,8
     LTEXT           "8:",IDC_STATIC,35,225,11,8
     LTEXT           "9:",IDC_STATIC,35,236,11,8
+	LTEXT			"10:",IDC_STATIC,31,247,11,8
     PUSHBUTTON      "Ctrl F5",IDC_CSAVE,103,133,57,11
     PUSHBUTTON      "1",IDC_1SEL,44,144,57,11
     PUSHBUTTON      "Shift F1",IDC_1SAVE,103,144,57,11
@@ -350,6 +352,9 @@ BEGIN
     PUSHBUTTON      "9",IDC_9SEL,44,234,57,11
     PUSHBUTTON      "Shift F9",IDC_9SAVE,103,234,57,11
     PUSHBUTTON      "F9",IDC_9LOAD,162,234,57,11
+	PUSHBUTTON		"10",IDC_10SEL,44,246,57,11
+	PUSHBUTTON		"Shift F10",IDC_10SAVE,103,246,57,11
+	PUSHBUTTON		"F10",IDC_10LOAD,162,246,57,11
     PUSHBUTTON      "Ctrl F7",IDC_CLOAD,162,133,57,11
     LTEXT           "Speed Up:",IDC_STATIC,18,28,57,8,0,WS_EX_RIGHT
     LTEXT           "Speed Down:",IDC_STATIC,18,40,57,8,0,WS_EX_RIGHT
