--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -234,13 +234,17 @@ IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-GROUPBOX        "Other Options", IDC_OTHEROPTIONS, 7, 7, 215, 60
+GROUPBOX        "Other Options", IDC_OTHEROPTIONS, 7, 7, 224, 200
 #ifdef LUA_MODULEIMPL
 CONTROL         "Ask on lua close", IDC_LUA_WARNONCLOSE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 20, 100, 10
 CONTROL         "Simplified lua dialog", IDC_LUA_SIMPLEDIALOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 30, 100, 10
 #endif
 CONTROL         "Automatic movie backups", IDC_MOVIEBACKUPS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 40, 100, 10
 CONTROL         "Frequent statusbar updates", IDC_FREQUENTVCRREFRESH, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 50, 120, 10
+CONTROL         "No Synchronisation", IDC_AV_NOSYNC, "Button", BS_AUTORADIOBUTTON, 16, 60, 150, 12
+CONTROL         "Audio-Authoritative Synchronisation", IDC_AV_AUDIOSYNC, "Button", BS_AUTORADIOBUTTON, 16, 72, 150, 12
+CONTROL         "Old Video Synchronisation", IDC_AV_VIDEOSYNC, "Button", BS_AUTORADIOBUTTON, 16, 84, 150, 12
+
 END
 
 IDD_AUDIT_ROMS_DIALOG DIALOGEX 0, 0, 183, 138
