--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,3 +27,9 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v2
+      with:
+        name: mupen-artifact
+        path: winproject/mupen64/bin/mupen64.exe
+        retention-days: 7
