--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -56,6 +56,7 @@ BEGIN
             MENUITEM "Freeze",                      ID_RECENTROMS_FREEZE
             MENUITEM SEPARATOR
         END
+        MENUITEM "&Load Latest ROM\tCtrl Shift L", ID_LOAD_LATEST
         MENUITEM SEPARATOR
         POPUP "Language"
         BEGIN
