--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -706,9 +706,9 @@ END
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDI_AUSTRALIA           ICON                    "icons\\austral.ico"
+IDI_M64ICONBIG          ICON                    "icons\\m64big.ico"
 
-181                     ICON                    "icons\\m64big.ico"
+IDI_AUSTRALIA           ICON                    "icons\\austral.ico"
 
 IDI_BETA                ICON                    "icons\\beta.ico"
 
