implemented cpu clock speed multiplier

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -238,7 +238,7 @@ IDD_OTHER_OPTIONS_DIALOG DIALOGEX 0, 0, 231, 273
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "Other Options", IDC_OTHEROPTIONS, 7, 7, 224, 200
+    GROUPBOX        "Other Options", IDC_OTHEROPTIONS, 7, 7, 215, 111
     CONTROL         "Ask on lua close", IDC_LUA_WARNONCLOSE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 20, 100, 10
     CONTROL         "Simplified lua dialog", IDC_LUA_SIMPLEDIALOG, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 30, 100, 10
     CONTROL         "Automatic movie backups", IDC_MOVIEBACKUPS, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 40, 100, 10
@@ -250,6 +250,9 @@ BEGIN
     CONTROL         "Old Video Synchronisation", IDC_AV_VIDEOSYNC, "Button", BS_AUTORADIOBUTTON, 16, 101, 150, 12
     CONTROL         "Allow loading movies on wrong roms", IDC_ALERTMOVIESERRORS,
     "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 61, 126, 10
+    GROUPBOX        "Lag Emulation", IDC_LAG_EMULATION, 7, 120, 215, 90
+    LTEXT           "CPU Clock Speed Multiplier", IDC_CLOCK_SPD_MULT, 16, 130, 100, 8
+    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT, 16, 140, 115, 100, CBS_DROPDOWNLIST | WS_TABSTOP
 END
 
 IDD_AUDIT_ROMS_DIALOG DIALOGEX 0, 0, 183, 138
