change every file in existence (c++20 works?)

--- a/winproject/mupen64/mupen64_2017.vcxproj
+++ b/winproject/mupen64/mupen64_2017.vcxproj
@@ -90,6 +90,7 @@
       <UseFullPaths>false</UseFullPaths>
       <EnableEnhancedInstructionSet>StreamingSIMDExtensions2</EnableEnhancedInstructionSet>
       <AdditionalOptions>/FI "../main/debughook.h" %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalDependencies>Shlwapi.lib;vfw32.lib;winmm.lib;Comctl32.lib;zlib-2008-x32.lib;uxtheme.lib;%(AdditionalDependencies)</AdditionalDependencies>
