load from existing savestate wip

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -585,10 +585,11 @@ BEGIN
     EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2, 217, 176, 91, 12, ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2, 217, 187, 91, 12, ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     GROUPBOX        "Start From", IDC_STARTFROM2, 177, 88, 139, 50
-    CONTROL         ".savestate", IDC_EXTSAVESTATE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 254, 112, 45, 10
-    CONTROL         "Savestate", IDC_FROMSNAPSHOT_RADIO, "Button", BS_AUTORADIOBUTTON, 190, 112, 64, 10
-    CONTROL         "Start", IDC_FROMSTART_RADIO, "Button", BS_AUTORADIOBUTTON, 190, 100, 50, 10
-    CONTROL         "EEPROM", IDC_FROMEEPROM_RADIO, "Button", BS_AUTORADIOBUTTON, 190, 125, 64, 10
+	CONTROL         ".savestate", IDC_EXTSAVESTATE, "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 223, 124, 45, 10
+	CONTROL         "Savestate", IDC_FROMSNAPSHOT_RADIO, "Button", BS_AUTORADIOBUTTON, 190, 112, 45, 10
+    CONTROL         "Existing Savestate", IDC_FROMEXISTINGSNAPSHOT_RADIO, "Button", BS_AUTORADIOBUTTON, 241, 100, 70, 10
+	CONTROL         "Start", IDC_FROMSTART_RADIO, "Button", BS_AUTORADIOBUTTON, 190, 100, 50, 10
+	CONTROL         "EEPROM", IDC_FROMEEPROM_RADIO, "Button", BS_AUTORADIOBUTTON, 241, 112, 64, 10
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
