implemented "start from existing savestate" movie option, fully implemented default directories for all file dialogs, recent roms menu is now grayed out when empty, and other minor changes probably

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -552,7 +552,7 @@ BEGIN
     EDITTEXT        IDC_INI_MOVIEFILE, 54, 20, 272, 12, ES_AUTOHSCROLL
     EDITTEXT        IDC_INI_AUTHOR, 54, 42, 272, 12, ES_AUTOHSCROLL
     EDITTEXT        IDC_INI_DESCRIPTION, 54, 60, 272, 12, ES_AUTOHSCROLL
-    PUSHBUTTON      "Browse...", IDC_MOVIE_BROWSE, 276, 3, 50, 14
+    PUSHBUTTON      "Save as...", IDC_MOVIE_BROWSE, 276, 3, 50, 14
     DEFPUSHBUTTON   "OK", IDC_OK, 220, 218, 50, 14
     PUSHBUTTON      "Cancel", IDC_CANCEL, 276, 218, 50, 14
     LTEXT           "Movie File:", IDC_INI_MOVIEFILE_TEXT, 11, 22, 40, 8
