--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -252,7 +252,7 @@ BEGIN
     "Button", BS_AUTOCHECKBOX | WS_TABSTOP, 16, 61, 126, 10
     GROUPBOX        "Lag Emulation", IDC_LAG_EMULATION, 7, 120, 215, 45
     LTEXT           "CPU Clock Speed Multiplier", IDC_CLOCK_SPD_MULT, 16, 132, 100, 8
-    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT, 16, 142, 115, 100, CBS_DROPDOWNLIST | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_CLOCK_SPD_MULT, 16, 142, 213-16, 100, CBS_DROPDOWNLIST | WS_TABSTOP
 END
 
 IDD_AUDIT_ROMS_DIALOG DIALOGEX 0, 0, 183, 138
