--- a/winproject/mupen64/mupen64_2017.vcxproj.filters
+++ b/winproject/mupen64/mupen64_2017.vcxproj.filters
@@ -36,6 +36,9 @@
     <Filter Include="Source Files\main\win\wrapper">
       <UniqueIdentifier>{d466fa5d-4877-46e1-8b94-1c3a68c0158d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\main\ffmpeg_capture">
+      <UniqueIdentifier>{b84fb3bf-fac6-4e80-947b-a20a7446dd89}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\config.h">
@@ -235,6 +238,9 @@
     </ClInclude>
     <ClInclude Include="..\..\main\win\wrapper\ReassociatingFileDialog.h">
       <Filter>Source Files\main\win\wrapper</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\main\ffmpeg_capture\ffmpeg_capture.hpp">
+      <Filter>Source Files\main\ffmpeg_capture</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -498,6 +504,9 @@
     </ClCompile>
     <ClCompile Include="..\..\main\win\wrapper\ReassociatingFileDialog.cpp">
       <Filter>Source Files\main\win\wrapper</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\main\ffmpeg_capture\manager_win.cpp">
+      <Filter>Source Files\main\ffmpeg_capture</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
