Improved crash log with more metadata also improved crash dialog

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -666,12 +666,10 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU
 CAPTION "Mupen64 Error"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Close Rom",IDC_ERROR_PANIC_CLOSEROM,206,70,61,14
-    DEFPUSHBUTTON   "Dump Crash Log",IDC_CRASHREPORT,6,70,67,14
-    PUSHBUTTON      "Continue",IDC_ERROR_CONTINUE,270,70,65,14
+    PUSHBUTTON      "Exit",IDC_ERROR_PANIC_CLOSE,205,70,65,14
+    PUSHBUTTON      "Ignore",IDC_ERROR_PANIC_IGNORE,270,70,61,14
     CONTROL         "An exception has been thrown.",IDC_ERRORTEXT,"Static",SS_LEFTNOWORDWRAP | WS_GROUP,73,6,262,40
     CONTROL         "",IDC_ERROR_PICTUREBOX,"Static",SS_BITMAP,6,6,67,53
-    PUSHBUTTON      "Close",IDC_ERROR_PANIC_CLOSEMUPEN,154,70,50,14
 END
 
 IDD_GAMEDEBUGGERDIALOG DIALOGEX 0, 0, 310, 177
